# raled

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  req.txt  views.py
api/: admin.py  api.py  models.py  router.py  serializers.py  views.py
api/migrations/: 0001_initial.py  0002_about_contact_worker.py  0003_alter_worker_image.py  0004_alter_contact_phone_number.py  0005_social_media_product_doi.py  0006_product_best.py  0007_alter_product_doi.py  0008_partner.py  0009_rename_facebook_social_media_url_and_more.py  0010_rename_fup_regulation_about_address_and_more.py  0011_redikt.py  0012_alter_redikt_discription.py  0013_redikt_work_place_en_redikt_work_place_ru.py  0014_rename_work_place_redikt_work_place_uz.py  0015_rename_description_product_description_en_and_more.py  0016_alter_social_media_image.py  0017_rename_image_social_media_icon.py  0018_remove_redikt_discription_redikt_url_linkedin.py
api/templatetags/: check_lang.py  description_change.py  social_medias.py
core/: settings.py  urls.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
locale/uz/LC_MESSAGES/: django.mo  django.po
static/css/: style.css
template/: about_us.html  base.html  book_detail.html  books.html  contact.html  index.html  redikt.html  send.html
